<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appwidget_layput"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin"
    >
  <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:background="@drawable/widget_border"
      >

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/top_posts"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold|italic"
        />
    <ImageView
        android:id="@+id/refresh_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_side"
        android:clickable="true"
        android:contentDescription="@string/refresh_top_posts"
        android:focusable="true"
        android:src="@drawable/ic_refresh_black_24dp"
        android:tint="@color/white_50"
        />
  </RelativeLayout>

  <ListView
      android:id="@+id/top_posts"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/margin_side"
      android:layout_marginStart="@dimen/margin_side"
      android:background="@drawable/widget_border"
      >

  </ListView>
</LinearLayout>
